--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Your awesome title
+theme: minima
 author: HRITTIKHERE
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
